Fix spacing for external links (#1349)
* Fix spacing for external links

* Update snapshots

--- a/src/js/App/Sidenav/SectionNav.scss
+++ b/src/js/App/Sidenav/SectionNav.scss
@@ -43,6 +43,7 @@
                 svg {
                   width: 12px;
                   height: 12px;
+                  margin-left: var(--pf-global--spacer--sm)
                 }
               }
             }
@@ -58,7 +59,7 @@
     .ins-c-navigation__additional-links{
       --pf-c-nav__link--hover--after--BorderColor:  var(--pf-global--primary-color--light-100);
       a {
-        padding-left: var(--pf-global--spacer--sm)
+        padding-left: var(--pf-global--spacer--lg);
       }
       svg {
         width: 12px;
